syntax = "proto3";

package musicclub.user;

option go_package = "musicclubbot/backend/proto";

// Minimal user info for displaying assignments and ownership.
message User {
  string id = 1;
  string display_name = 2;
  string username = 3;
  string avatar_url = 4;
  uint64 telegram_id = 5;
}
